--- a/config.json.example
+++ b/config.json.example
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "",
+  "TOKEN": "MTIwMzQ4MTgzNjQwNDM0NjkwMA.Ggvlmq._MuCLzsCoRu72kfa02i5R5SL0IgpqFuvY3u5P0",
   "MAX_PLAYLIST_SIZE": 10,
   "PRUNING": false,
   "LOCALE": "en",
